Adding tests for the limit from precompiled contracts